[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/UI/PlayerStatus.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/UI/Hanger.gd" type="Script" id=2]
[ext_resource path="res://scenes/UI/ShipStats.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/img/button_back.svg" type="Texture" id=4]
[ext_resource path="res://assets/Fonts/default.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/img/button_back_unselected.svg" type="Texture" id=6]
[ext_resource path="res://default_theme.tres" type="Theme" id=7]
[ext_resource path="res://scenes/UI/csOpt.tscn" type="PackedScene" id=8]

[node name="Hanger" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_bottom = -2.0
theme = ExtResource( 7 )
script = ExtResource( 2 )

[node name="PlayerStatus" parent="." instance=ExtResource( 1 )]

[node name="Menu" type="PanelContainer" parent="."]
anchor_right = 0.168375
anchor_bottom = 1.0
margin_right = -216.0
rect_min_size = Vector2( 240, 0 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Main" type="VBoxContainer" parent="Menu"]
margin_left = 4.0
margin_top = 4.0
margin_right = 236.0
margin_bottom = 696.0
custom_constants/separation = 10

[node name="title" type="Label" parent="Menu/Main"]
margin_right = 232.0
margin_bottom = 147.0
custom_fonts/font = ExtResource( 5 )
text = "Ship 
             Select"
autowrap = true
uppercase = true

[node name="HSeparator3" type="HSeparator" parent="Menu/Main"]
margin_top = 157.0
margin_right = 232.0
margin_bottom = 161.0

[node name="Control2" type="Control" parent="Menu/Main"]
margin_top = 171.0
margin_right = 232.0
margin_bottom = 191.0
rect_min_size = Vector2( 0, 20 )

[node name="Class" type="TextureButton" parent="Menu/Main"]
self_modulate = Color( 1, 1, 1, 0.121569 )
margin_top = 201.0
margin_right = 232.0
margin_bottom = 265.0
rect_min_size = Vector2( 0, 64 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="Menu/Main/Class"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "Class"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="Control" type="Control" parent="Menu/Main"]
margin_top = 275.0
margin_right = 232.0
margin_bottom = 295.0
rect_min_size = Vector2( 0, 20 )

[node name="HSeparator" type="HSeparator" parent="Menu/Main"]
margin_top = 305.0
margin_right = 232.0
margin_bottom = 309.0

[node name="Confirm" type="TextureButton" parent="Menu/Main"]
visible = false
self_modulate = Color( 1, 1, 1, 0.121569 )
margin_top = 148.0
margin_right = 230.0
margin_bottom = 212.0
rect_min_size = Vector2( 0, 64 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="Menu/Main/Confirm"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "Confirm"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="Cancel" type="TextureButton" parent="Menu/Main"]
self_modulate = Color( 1, 1, 1, 0.121569 )
margin_top = 319.0
margin_right = 232.0
margin_bottom = 383.0
rect_min_size = Vector2( 0, 64 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="Menu/Main/Cancel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "Cancel"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="HSeparator2" type="HSeparator" parent="Menu/Main"]
visible = false
margin_top = 343.0
margin_right = 240.0
margin_bottom = 347.0

[node name="Class_Select" type="VBoxContainer" parent="Menu"]
visible = false
margin_right = 240.0
margin_bottom = 700.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="Menu/Class_Select"]
margin_right = 240.0
margin_bottom = 97.0
custom_fonts/font = ExtResource( 5 )
text = "Class 
             Select"
autowrap = true
uppercase = true

[node name="HSeparator2" type="HSeparator" parent="Menu/Class_Select"]
margin_top = 107.0
margin_right = 240.0
margin_bottom = 111.0

[node name="Control2" type="Control" parent="Menu/Class_Select"]
margin_top = 121.0
margin_right = 240.0
margin_bottom = 141.0
rect_min_size = Vector2( 0, 20 )

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Class_Select"]
margin_top = 151.0
margin_right = 240.0
margin_bottom = 363.0
custom_constants/separation = 10

[node name="Striker" type="TextureButton" parent="Menu/Class_Select/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.121569 )
margin_right = 240.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="Menu/Class_Select/VBoxContainer/Striker"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "Striker"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="Midfield" type="TextureButton" parent="Menu/Class_Select/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.121569 )
margin_top = 74.0
margin_right = 240.0
margin_bottom = 138.0
rect_min_size = Vector2( 0, 64 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="Menu/Class_Select/VBoxContainer/Midfield"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "Midfield"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="Defender" type="TextureButton" parent="Menu/Class_Select/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.121569 )
margin_top = 148.0
margin_right = 240.0
margin_bottom = 212.0
rect_min_size = Vector2( 0, 64 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="Menu/Class_Select/VBoxContainer/Defender"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "Defender"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="Control" type="Control" parent="Menu/Class_Select"]
margin_top = 373.0
margin_right = 240.0
margin_bottom = 393.0
rect_min_size = Vector2( 0, 20 )

[node name="HSeparator" type="HSeparator" parent="Menu/Class_Select"]
margin_top = 403.0
margin_right = 240.0
margin_bottom = 407.0

[node name="Confirm" type="TextureButton" parent="Menu/Class_Select"]
visible = false
self_modulate = Color( 1, 1, 1, 0.121569 )
margin_top = 148.0
margin_right = 230.0
margin_bottom = 212.0
rect_min_size = Vector2( 0, 64 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="Menu/Class_Select/Confirm"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "Confirm"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="Cancel" type="TextureButton" parent="Menu/Class_Select"]
self_modulate = Color( 1, 1, 1, 0.121569 )
margin_top = 417.0
margin_right = 240.0
margin_bottom = 481.0
rect_min_size = Vector2( 0, 64 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="Menu/Class_Select/Cancel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "Cancel"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="ShipSelect" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Control" type="Control" parent="ShipSelect"]
margin_right = 1366.0
margin_bottom = 700.0

[node name="Back" type="TextureButton" parent="ShipSelect/Control"]
self_modulate = Color( 1, 1, 1, 0.129412 )
anchor_left = 0.00732064
anchor_top = 0.898571
anchor_right = 0.14202
anchor_bottom = 0.99
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 0, 64 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="ShipSelect/Control/Back"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "Back"
align = 1
valign = 1
uppercase = true

[node name="Confirm" type="TextureButton" parent="ShipSelect/Control"]
self_modulate = Color( 1, 1, 1, 0.129412 )
anchor_left = 0.862372
anchor_top = 0.902857
anchor_right = 0.997071
anchor_bottom = 0.994286
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 0, 64 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
expand = true
stretch_mode = 5
flip_h = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="ShipSelect/Control/Confirm"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "Confirm"
align = 1
valign = 1
uppercase = true

[node name="SelectionIndicator" type="HBoxContainer" parent="ShipSelect/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -39.0
margin_top = -37.782
margin_right = 39.0
margin_bottom = -19.782
grow_horizontal = 2
rect_min_size = Vector2( 18, 18 )
custom_constants/separation = 12
alignment = 1

[node name="SelectionPip1" type="TextureButton" parent="ShipSelect/Control/SelectionIndicator"]
margin_right = 18.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 4 )
expand = true

[node name="SelectionPip2" type="TextureButton" parent="ShipSelect/Control/SelectionIndicator"]
margin_left = 30.0
margin_right = 48.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 4 )
expand = true

[node name="SelectionPip3" type="TextureButton" parent="ShipSelect/Control/SelectionIndicator"]
margin_left = 60.0
margin_right = 78.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 4 )
expand = true

[node name="PanelContainer" type="PanelContainer" parent="ShipSelect/Control"]
anchor_right = 0.221083
anchor_bottom = 0.885714
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TabContainer" type="TabContainer" parent="ShipSelect/Control/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 297.999
margin_bottom = 616.0
tab_align = 0

[node name="Paint Job" type="Tabs" parent="ShipSelect/Control/PanelContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 25.0
margin_right = -5.0
margin_bottom = -5.0

[node name="HFlowContainer" type="HFlowContainer" parent="ShipSelect/Control/PanelContainer/TabContainer/Paint Job"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/vseparation = 5
custom_constants/hseparation = 5

[node name="csOpt" parent="ShipSelect/Control/PanelContainer/TabContainer/Paint Job/HFlowContainer" instance=ExtResource( 8 )]
margin_bottom = 74.0

[node name="Rockets" type="Tabs" parent="ShipSelect/Control/PanelContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 25.0
margin_right = -5.0
margin_bottom = -5.0

[node name="HFlowContainer2" type="HFlowContainer" parent="ShipSelect/Control/PanelContainer/TabContainer/Rockets"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/vseparation = 5
custom_constants/hseparation = 5

[node name="Misc" type="Tabs" parent="ShipSelect/Control/PanelContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HFlowContainer3" type="HFlowContainer" parent="ShipSelect/Control/PanelContainer/TabContainer/Misc"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/vseparation = 5
custom_constants/hseparation = 5

[node name="ShipStats" parent="ShipSelect/Control" instance=ExtResource( 3 )]

[connection signal="pressed" from="Menu/Main/Class" to="." method="_on_Class_pressed"]
[connection signal="pressed" from="Menu/Main/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="Menu/Main/Cancel" to="." method="_on_Back_pressed"]
[connection signal="visibility_changed" from="Menu/Class_Select" to="." method="_on_Class_Select_visibility_changed"]
[connection signal="focus_entered" from="Menu/Class_Select/VBoxContainer/Striker" to="." method="_on_Striker_focus_entered"]
[connection signal="focus_entered" from="Menu/Class_Select/VBoxContainer/Midfield" to="." method="_on_Midfield_focus_entered"]
[connection signal="focus_entered" from="Menu/Class_Select/VBoxContainer/Defender" to="." method="_on_Defender_focus_entered"]
[connection signal="pressed" from="Menu/Class_Select/Confirm" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Menu/Class_Select/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="visibility_changed" from="ShipSelect" to="." method="_on_ShipSelect_visibility_changed"]
[connection signal="pressed" from="ShipSelect/Control/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="ShipSelect/Control/Confirm" to="." method="_on_Confirm_pressed"]
